[project]
name = "Construction-Remal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.23.0",
    "httpx>=0.28.1",
    "ipykernel>=6.29.5",
    "langchain>=0.3.26",
    "langchain-google-genai>=2.1.6",
    "langchain-groq>=0.3.4",
    "langchain-mcp-adapters>=0.1.7",
    "langchain-tavily>=0.2.5",
    "langgraph>=0.5.0",
    "langgraph-cli[inmem]>=0.3.3",
    "langsmith>=0.4.4",
    "mcp>=1.10.1",
    "python-dotenv>=1.1.1",
    "streamlit>=1.52.2",
    "tavily-python>=0.7.17",
]
